Add of comments, error, update of swagger and refactor function
